--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		  <div class="carousel-caption text-left">
 			<h3 class="wow fadeInRight" data-wow-delay="0.2s">Msc report</h1>  
 			<h2 class="wow fadeInRight" data-wow-delay="0.4s">Library </h2>
-			<h2 class="wow fadeInRight" data-wow-delay="0.6s">Data Visualisations</h4>
+      <h2 class="wow fadeInRight" data-wow-delay="0.6s">Data Visualisations</h4>
+        
 		  </div>
 		</div>
 	</div>
@@ -57,7 +58,6 @@
 		<ul>
 			<li><a href ="index.html" class ='btn btn-common btn-effect'>Summary</a></li>
 			<li><a  href ="/index1.html" class ='btn btn-common btn-effect'>Trends</a></li>
-			<li><a  href ="/index2.html" class ='btn btn-common btn-effect'>Comparisons</a></li>
 			<li><a  href ="/index3.html" class ='btn btn-common btn-effect'>Recommandations</a></li>
 		</ul>
 	</div>
@@ -172,7 +172,8 @@
 	<div class="row">
 	  <div class="col-lg-6 col-md-6 col-xs-12">            
 		<div class="cta-text">
-		  <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, vel! Eligendi voluptates deserunt eum debitis tempore repellat laboriosam perspiciatis! Nisi animi veniam quibusdam nostrum labore! Et, doloremque. Autem, non dolores.</h6>
+      <h6>English has a 97% absolute advantage over other languages. The second one is French with 1% and follows by German of 0.6%, Spanish of 0.5% and Chinese of 0.3%.</h6>
+      <h6>(click the legend to see more)</h6>
 		</div>
 	  </div>
 	  <div class="col-lg-6 col-md-6 col-xs-12 text-right">
