--- a/index1.html
+++ b/index1.html
@@ -57,7 +57,6 @@
 	<ul>
 		<li><a href ="index.html" class ='btn btn-common btn-effect'>Summary</a></li>
 		<li><a  href ="/index1.html" class ='btn btn-common btn-effect'>Trends</a></li>
-		<li><a  href ="/index2.html" class ='btn btn-common btn-effect'>Comparisons</a></li>
 		<li><a  href ="/index3.html" class ='btn btn-common btn-effect'>Recommandations</a></li>
 	</ul>
    </div>
@@ -69,7 +68,6 @@
   <div class="container">
 	<div class="section-header">          
 	  <h2 class="section-title">Physical Borrowing</h2>
-	  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy</p>
 	</div>
 	<div id="line" style="min-width:310px ;height:400px ; margin: 0 auto"></div>
   </div>
@@ -82,8 +80,8 @@
 	<div class="row justify-content-center">
 	  <div class="col-10">
 		<div class="cta-trial text-center">
-		  <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam praesentium hic neque similique! Aut nostrum eligendi ullam totam voluptatum laborum, ut quod mollitia unde, expedita ipsa nam tempora blanditiis id!#</h6>
-		  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod<br> Lorem ipsum dolor sit amet, consectetuer</p>
+		  <h6>In general, these two charts follow the same pattern. Just like climbing two mountains: the amount arises from September when new academic year starts, till the peak in October, declines in December during the Christmas Holiday, and back to the second peak in March when the summer exams take place. It finally drops to the lowest in summer. </h6>
+		  <h6>The overall physical borrowing is decreasing every year since 2015. From the blue line of year2019-20, we can conclude that the borrowing amount in this year is the least and it dropped to 0 in April as the Covid-19 Lockdown</h6>
 		</div>
 	  </div>
 	</div>
@@ -95,13 +93,24 @@
 	<div class="container">
 	  <div class="section-header">          
 		<h2 class="section-title">Electronic Borrowing</h2>
-		<p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy</p>
 	  </div>
-	  <div id="line" style="min-width:310px ;height:400px ; margin: 0 auto"></div>
+	  <div id="eline" style="min-width:310px ;height:400px ; margin: 0 auto"></div>
 	</div>
   </section>
 <!-- Features Section End -->    
-
+<section class="call-action section">
+	<div class="container">
+	  <div class="row justify-content-center">
+		<div class="col-10">
+		  <div class="cta-trial text-center">
+			<h6>The reason of causing physical borrowing to decline is that the increasing amount of e-usages. The more people are using electronic book, the less physical books have been borrowed</h6>
+			<h6>The trend of e-usages is in the opposite direction: the amount keeps rising from 2015 to 2019. The reason of why the 2020 line reacts differently and in a weired pattern, is that the way that e-usage is counted changed during 2020. The data is incomplete.</h6>
+		    <h6>(The spike in July 2017 is because of some unusual behaviour for one resource)</h6>
+		</div>
+		</div>
+	  </div>
+	</div>
+  </section>
 
 
 <!-- Footer Section Start -->
@@ -144,6 +153,7 @@
 <script src="js/contact-form-script.js"></script>   
 <script src="js/main.js"></script>
 <script src='js/k.js'></script>
+<script src='js/e.js'></script>
 
 </body>
 </html>
