--- a/index1.html
+++ b/index1.html
@@ -104,7 +104,7 @@
 		<div class="col-10">
 		  <div class="cta-trial text-center">
 			<h6>The reason of causing physical borrowing to decline is that the increasing amount of e-usages. The more people are using electronic book, the less physical books have been borrowed</h6>
-			<h6>The trend of e-usages is in the opposite direction: the amount keeps rising from 2015 to 2019. The reason of why the 2020 line reacts differently and in a weired pattern, is that the way that e-usage is counted changed during 2020. The data is incomplete.</h6>
+			<h6>The trend of e-usages is in the opposite direction: the amount keeps rising from 2015 to 2019. The reason of why the 2020 line reacts differently is that the way that e-usage is counted changed during 2020. The data is incomplete.</h6>
 		    <h6>(The spike in July 2017 is because of some unusual behaviour for one resource)</h6>
 		</div>
 		</div>
